--- a/.htaccess
+++ b/.htaccess
@@ -8,8 +8,8 @@ Allow from 172.24.130.216
 Allow from 172.29.128.81
 
 AddDefaultCharset utf-8
-php_flag display_errors off
-php_flag display_startup_errors of
+php_flag display_errors on
+php_flag display_startup_errors on
 
 php_value max_execution_time 20
 
